tests/asm-link/blue-paint-limits/rgbasm.err
error: unexpected character after line continuation
    ╭─[ <macro argument #1>:1:1 ]
    │
  1 │ \2
    │ ┬  
    │ ╰── there can only be whitespace between this backslash and the end of the line
    │
    ├─[ test.asm:40:11 ]
    │
 40 │   println \1
    │           ─┬  
    │            ╰── expanded here
    │ 
 43 │ nth \\2, lol
    │ ─┬─  
    │  ╰─── macro called here
    │ 
    │ Help: characters inside of interpolations and macro args cannot start one themselves
────╯
1 error generated.
